# ChangeLog for dev-ruby/api-versions
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Jun 2014; Hans de Graaff <graaff@gentoo.org> api-versions-1.2.0.ebuild:
  Add ruby20.

*api-versions-1.2.0 (19 Sep 2013)

  19 Sep 2013; Hans de Graaff <graaff@gentoo.org> +api-versions-1.2.0.ebuild,
  +metadata.xml:
  Initial import.
