@@ -1,1 +1,2 @@
 DIST api-versions-1.2.0.gem 13312 SHA256 490336d0c1cf217e4a7ca38a54d9e835e867b02083f50815b5fa0d6f00e66724 SHA512 4c893ff25cd6da397f8764258466961b511d508dc88e9e85ae8598a782cce9d19af8f8639bb735b29d4f0d56939f94bfa2a07283c1ea87f02122a8b5ec2aa44e WHIRLPOOL a0bb6cad88b9f80add726b252850fe45b97d2e440afa0cb4dc80d3c6da614cdb0e5631edd495fb2ecc5287994b617204d8eaa270f4963afe5c441b0f3c6fe130
+DIST api-versions-1.2.1.gem 13824 SHA256 80b9f3bdc120e1cd703c5fc03b33c3625753cb95795146ba27edfb5fd3725063 SHA512 82e5eff2ee1765ea50e55cb54c9d1cb4eb9aab529d233557d9779918a8031c1705d10df9c4d28a9b113b526d3ab899089de95818d8b1c03eb03f4c9e7a93a2c0 WHIRLPOOL 646e2c56634e1089455f76e8775f4ab1845f555eb00c330d86ad91e5a7377b7066f9317747f1b051a8cc525d1b4ae8e7ad26e989a9f4bf0b664d6c3c9b14bd22
