@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/api-versions
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*api-versions-1.2.1 (17 Apr 2015)
+
+  17 Apr 2015; Hans de Graaff <graaff@gentoo.org> +api-versions-1.2.1.ebuild:
+  Version bump.
 
   26 Jun 2014; Hans de Graaff <graaff@gentoo.org> api-versions-1.2.0.ebuild:
   Add ruby20.
